language-bindings/rust/crates/wamr-sys/src/lib.rs

#[test]
fn bindgen_test_layout_wasm_section_t() {
    const UNINIT: ::core::mem::MaybeUninit<wasm_section_t> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<wasm_section_t>(),
        32usize,
        concat!("Size of: ", stringify!(wasm_section_t))
    );
    assert_eq!(
        ::core::mem::align_of::<wasm_section_t>(),
        8usize,
        concat!("Alignment of ", stringify!(wasm_section_t))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_section_t),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).section_type) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_section_t),
            "::",
            stringify!(section_type)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).section_body) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_section_t),
            "::",
            stringify!(section_body)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).section_body_size) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_section_t),
            "::",
            stringify!(section_body_size)
        )
    );
}
impl Default for wasm_section_t {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type aot_section_t = wasm_section_t;
pub type wasm_section_list_t = *mut wasm_section_t;
pub type aot_section_list_t = *mut wasm_section_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WASMExecEnv {
    _unused: [u8; 0],
}
pub type wasm_exec_env_t = *mut WASMExecEnv;
pub const package_type_t_Wasm_Module_Bytecode: package_type_t = 0;
pub const package_type_t_Wasm_Module_AoT: package_type_t = 1;
pub const package_type_t_Package_Type_Unknown: package_type_t = 65535;
pub type package_type_t = ::core::ffi::c_uint;
pub const mem_alloc_type_t_Alloc_With_Pool: mem_alloc_type_t = 0;
pub const mem_alloc_type_t_Alloc_With_Allocator: mem_alloc_type_t = 1;
pub const mem_alloc_type_t_Alloc_With_System_Allocator: mem_alloc_type_t = 2;
pub type mem_alloc_type_t = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union MemAllocOption {
    pub pool: MemAllocOption__bindgen_ty_1,
    pub allocator: MemAllocOption__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MemAllocOption__bindgen_ty_1 {
    pub heap_buf: *mut ::core::ffi::c_void,
    pub heap_size: u32,
}
#[test]
fn bindgen_test_layout_MemAllocOption__bindgen_ty_1() {
    const UNINIT: ::core::mem::MaybeUninit<MemAllocOption__bindgen_ty_1> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<MemAllocOption__bindgen_ty_1>(),
        16usize,
        concat!("Size of: ", stringify!(MemAllocOption__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<MemAllocOption__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(MemAllocOption__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).heap_buf) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption__bindgen_ty_1),
            "::",
            stringify!(heap_buf)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).heap_size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption__bindgen_ty_1),
            "::",
            stringify!(heap_size)
        )
    );
}
impl Default for MemAllocOption__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MemAllocOption__bindgen_ty_2 {
    pub malloc_func: *mut ::core::ffi::c_void,
    pub realloc_func: *mut ::core::ffi::c_void,
    pub free_func: *mut ::core::ffi::c_void,
    pub user_data: *mut ::core::ffi::c_void,
}
#[test]
fn bindgen_test_layout_MemAllocOption__bindgen_ty_2() {
    const UNINIT: ::core::mem::MaybeUninit<MemAllocOption__bindgen_ty_2> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<MemAllocOption__bindgen_ty_2>(),
        32usize,
        concat!("Size of: ", stringify!(MemAllocOption__bindgen_ty_2))
    );
    assert_eq!(
        ::core::mem::align_of::<MemAllocOption__bindgen_ty_2>(),
        8usize,
        concat!("Alignment of ", stringify!(MemAllocOption__bindgen_ty_2))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).malloc_func) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption__bindgen_ty_2),
            "::",
            stringify!(malloc_func)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).realloc_func) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption__bindgen_ty_2),
            "::",
            stringify!(realloc_func)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).free_func) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption__bindgen_ty_2),
            "::",
            stringify!(free_func)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).user_data) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption__bindgen_ty_2),
            "::",
            stringify!(user_data)
        )
    );
}
impl Default for MemAllocOption__bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[test]
fn bindgen_test_layout_MemAllocOption() {
    const UNINIT: ::core::mem::MaybeUninit<MemAllocOption> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<MemAllocOption>(),
        32usize,
        concat!("Size of: ", stringify!(MemAllocOption))
    );
    assert_eq!(
        ::core::mem::align_of::<MemAllocOption>(),
        8usize,
        concat!("Alignment of ", stringify!(MemAllocOption))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pool) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption),
            "::",
            stringify!(pool)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).allocator) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MemAllocOption),
            "::",
            stringify!(allocator)
        )
    );
}
impl Default for MemAllocOption {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct mem_alloc_info_t {
    pub total_size: u32,
    pub total_free_size: u32,
    pub highmark_size: u32,
}
#[test]
fn bindgen_test_layout_mem_alloc_info_t() {
    const UNINIT: ::core::mem::MaybeUninit<mem_alloc_info_t> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mem_alloc_info_t>(),
        12usize,
        concat!("Size of: ", stringify!(mem_alloc_info_t))
    );
    assert_eq!(
        ::core::mem::align_of::<mem_alloc_info_t>(),
        4usize,
        concat!("Alignment of ", stringify!(mem_alloc_info_t))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).total_size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(mem_alloc_info_t),
            "::",
            stringify!(total_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).total_free_size) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(mem_alloc_info_t),
            "::",
            stringify!(total_free_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).highmark_size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(mem_alloc_info_t),
            "::",
            stringify!(highmark_size)
        )
    );
}
pub const RunningMode_Mode_Interp: RunningMode = 1;
pub const RunningMode_Mode_Fast_JIT: RunningMode = 2;
pub const RunningMode_Mode_LLVM_JIT: RunningMode = 3;
pub const RunningMode_Mode_Multi_Tier_JIT: RunningMode = 4;
pub type RunningMode = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct RuntimeInitArgs {
    pub mem_alloc_type: mem_alloc_type_t,
    pub mem_alloc_option: MemAllocOption,
    pub native_module_name: *const ::core::ffi::c_char,
    pub native_symbols: *mut NativeSymbol,
    pub n_native_symbols: u32,
    pub max_thread_num: u32,
    pub ip_addr: [::core::ffi::c_char; 128usize],
    pub unused: ::core::ffi::c_int,
    pub instance_port: ::core::ffi::c_int,
    pub fast_jit_code_cache_size: u32,
    pub running_mode: RunningMode,
    pub llvm_jit_opt_level: u32,
    pub llvm_jit_size_level: u32,
    pub segue_flags: u32,
    #[doc = " If enabled\n - llvm-jit will output a jitdump file for `perf inject`\n - aot will output a perf-${pid}.map for `perf record`\n - fast-jit. TBD\n - multi-tier-jit. TBD\n - interpreter. TBD"]
    pub enable_linux_perf: bool,
}
